--- a/component_folder/footer.html
+++ b/component_folder/footer.html
@@ -9,7 +9,9 @@
 <body>
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-          <span class="text-muted">Place sticky footer content here.</span>
+          <span class="text-muted">
+            Place for contact
+          </span>
         </div>
       </footer>
 </body>
