--- a/component_folder/header.html
+++ b/component_folder/header.html
@@ -30,12 +30,12 @@
                             Research
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Table of content</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="Research.html">Table of content</a></li>
+                            <li><a class="dropdown-item" href="Research.html">Another action</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="Research.html">Something else here</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -44,12 +44,12 @@
                             Publication
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Table of content</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="Publication.html">Table of content</a></li>
+                            <li><a class="dropdown-item" href="Publication.html">Another action</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="Publication.html">Something else here</a></li>
                         </ul>
                     </li>
                 </ul>
