--- a/component_folder/header.html
+++ b/component_folder/header.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Education.html">Education</a>
+                        <a class="nav-link active" aria-current="page" href="education.html">Education</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="Research.html" id="navbarDropdown" role="button"
