--- a/index.html
+++ b/index.html
@@ -18,7 +18,83 @@
   <body>
     <div class="sticky-top" id="navhead"></div>
     <div class="p-2 content">
-      <div id="content"></div>
+      <div class="container text-start">
+        <div class="row">
+          <div class="col">
+            <div class="container text-start">
+              <div class="row">
+                <div class="col">
+                  Gender
+                </div>
+                <div class="col">
+                  <div id="1left1"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  Weight
+                </div>
+                <div class="col">
+                  <div id="1left2"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  Nationality
+                </div>
+                <div class="col">
+                  <div id="1left3"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  Date of Birth
+                </div>
+                <div class="col">
+                  <div id="1left4"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="container text-start">
+              <div class="row">
+                <div class="col">
+                  Blood Type
+                </div>
+                <div class="col">
+                  <div id="1right1"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  Height
+                </div>
+                <div class="col">
+                  <div id="1right2"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  Religion
+                </div>
+                <div class="col">
+                  <div id="1right3"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  E-mail
+                </div>
+                <div class="col">
+                  <div id="1right4"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </div>
     <div id="footer">footer</div>
 
