--- a/component_folder/header.html
+++ b/component_folder/header.html
@@ -24,6 +24,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="education.html">Education</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="workExperience.html">Work Experience</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="Research.html" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
