--- a/education.html
+++ b/education.html
@@ -1,66 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Education</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
 
-    <style></style>
-    <link rel="stylesheet" href="./component_folder/cssholder.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Education</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
-  <body>
-    <div class="sticky-top" id="navhead"></div>
-    <div class="p-2 content">
-      <div class="container text-start">
         <div class="row">
-          <div class="col">
-            Blood Type
-          </div>
-          <div class="col">
-            <div id="1right1"></div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            Height
-          </div>
-          <div class="col">
-            <div id="1right2"></div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            Religion
-          </div>
-          <div class="col">
-            <div id="1right3"></div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            E-mail
-          </div>
-          <div class="col">
-            <div id="1right4"></div>
-          </div>
-        </div>
-      </div>
-      <div id="content"></div>
+  <style></style>
+  <link rel="stylesheet" href="./component_folder/cssholder.css" />
+</head>
+
+<body>
+  <div class="sticky-top" id="navhead"></div>
+  <div class="p-2 content">
+    <div class="container text-start">
+      <table class="table">
+        <tbody>
+          <tr>
+            <th>
+              Years
+            </th>
+            <th>
+              Degrees
+            </th>
+          </tr>
+          <tr>
+            <td id="box1"></td>
+            <td id="boxa1"></td>
+          </tr>
+          <tr>
+            <td id="box2"></td>
+            <td id="boxa2"></td>
+          </tr>
+          <tr>
+            <td id="box3"></td>
+            <td id="boxa3"></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <div id="footer">footer</div>
+    
+    <div id="content"></div>
+  </div>
+  <div id="footer"></div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./component_folder/js/Education.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="./component_folder/js/Education.js"></script>
+</body>
+
 </html>
