--- a/workExperience.html
+++ b/workExperience.html
@@ -18,15 +18,34 @@
   <body>
     <div class="sticky-top" id="navhead"></div>
     <div class="p-2 content">
-      <div id="content"></div>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th>
+              Years
+            </th>
+            <th>
+              Work
+            </th>
+          </tr>
+          <tr>
+            <td id="box1"></td>
+            <td id="boxa1"></td>
+          </tr>
+          <tr>
+            <td id="box2"></td>
+            <td id="boxa2"></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <div id="footer">footer</div>
+    <div id="footer"></div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="./component_folder/js/Education.js"></script>
+    <script src="./component_folder/js/WorkEXP.js"></script>
   </body>
 </html>
