--- a/Publication.html
+++ b/Publication.html
@@ -18,9 +18,61 @@
   <body>
     <div class="sticky-top" id="navhead"></div>
     <div class="p-2 content">
-      <div id="content"></div>
+      <div class="container text-start">
+        <table class="table" id="Perid">
+          <tbody>
+            <tr>
+              <th>
+                Periodical
+              </th>
+            </tr>
+            <tr>
+              <td id="box1"></td>
+            </tr>
+            <tr>
+              <td id="box2"></td>
+            </tr>
+            <tr>
+              <td id="box3"></td>
+            </tr>
+            <tr>
+              <td id="box4"></td>
+            </tr>
+            <tr>
+              <td id="box5"></td>
+            </tr>
+            <tr>
+              <td id="box6"></td>
+            </tr>
+            <tr>
+              <td id="box7"></td>
+            </tr>
+            <tr>
+              <td id="box8"></td>
+            </tr>
+            <tr>
+              <td id="box9"></td>
+            </tr>
+          </tbody>
+        </table>
+        <table class="table" id="CP">
+          <tbody>
+            <tr>
+              <th>
+                Conference Proceeding
+              </th>
+            </tr>
+            <tr>
+              <td id="boxa1"></td>
+            </tr>
+            <tr>
+              <td id="boxa2"></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-    <div id="footer">footer</div>
+    <div id="footer"></div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
