--- a/Research.html
+++ b/Research.html
@@ -18,10 +18,49 @@
   <body>
     <div class="sticky-top" id="navhead"></div>
     <div class="p-2 content">
-      <div id="content"></div>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th>
+              Years
+            </th>
+            <th>
+              Research
+            </th>
+          </tr>
+          <tr>
+            <td id="box1"></td>
+            <td id="boxa1"></td>
+          </tr>
+          <tr>
+            <td id="box2"></td>
+            <td id="boxa2"></td>
+          </tr>
+          <tr>
+            <td id="box3"></td>
+            <td id="boxa3"></td>
+          </tr>
+          <tr>
+            <td id="box4"></td>
+            <td id="boxa4"></td>
+          </tr>
+          <tr>
+            <td id="box5"></td>
+            <td id="boxa5"></td>
+          </tr>
+          <tr>
+            <td id="box6"></td>
+            <td id="boxa6"></td>
+          </tr>
+          <tr>
+            <td id="box7"></td>
+            <td id="boxa7"></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
-    <div id="footer">footer</div>
+    <div id="footer"></div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
