--- a/component_folder/header.html
+++ b/component_folder/header.html
@@ -27,19 +27,8 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="workExperience.html">Work Experience</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="Research.html" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Research
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="Research.html">Part 1</a></li>
-                            <li><a class="dropdown-item" href="Research.html">Part 2</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="Research.html">Part 3</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="Research.html">Research</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="Publication.html" id="navbarDropdown" role="button"
@@ -47,12 +36,8 @@
                             Publication
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="Publication.html">Part 1</a></li>
-                            <li><a class="dropdown-item" href="Publication.html">Part 2</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="Publication.html">Part 3</a></li>
+                            <li><a class="dropdown-item" href="Publication.html#Perid">Periodical</a></li>
+                            <li><a class="dropdown-item" href="Publication.html#CP">Conference Proceeding</a></li>
                         </ul>
                     </li>
                 </ul>
